--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h1{
 
 .destino{
     width: 100%;
-    height: 10%;
+    height: 15%;
     border-radius: 5px;
     border-color: #b0b2b2;
     background-color: white;
@@ -68,11 +68,14 @@ h1{
     border-radius: 10px; 
     border-color: #b0b2b2;
     background-color: white;*/
-    width: 100%;
-    height: 10%;
+    width: 95%;
+    height: 60%;
     border-radius: 5px;
     border-color: #d3d5d5;
     background-color: white;
+    margin-top: 5px;
+    margin-left: 5px;
+    
 }
 
 .search{
@@ -80,7 +83,7 @@ h1{
     color: white;
     border: none;
     width: 100%;
-    height: 10%;
+    height: 15%;
     border-radius: 5px;
     
     
@@ -95,9 +98,6 @@ nav{
     align-items: center;
     width: 100%;
     height: 5%;
-   
-
- 
 }
 
 ul {
@@ -107,5 +107,12 @@ ul {
     text-align: center;
     gap: 8px;
     padding: 10px;
+}
 
+.input{
+    width: 100%;
+    height: 15%;
+   border-radius: 5px;
+    border: 1px solid;
+    border-color: #b0b2b2;
 }
