--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,30 @@
+.application{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+
+}
 main{
     background-image: url(https://dals0gb6i1pll.cloudfront.net/img/banner-mobile-buser.e1bda3c.png);
     background-size: cover;
     background-position: top;
     width: 100%;
-    height: 89%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 24px;
+    overflow: auto;
 }
 .topo{
     width: 280px;
 }
 *{
     font-family: 'roboto',sans-serif;
+    box-sizing: border-box;
 }
 .navbar{
     padding: 0.5rem 1.5rem;
@@ -49,8 +61,10 @@ h1{
     /*margin-left: 2%;*/
     background-color: white;
     border-radius: 5px;
-    width: 80%;
-    height: 50%;
+    width: 100%;
+    max-width: 650px;
+    max-height: 900px;
+    height: 55%;
     padding: 1rem;
     
 }
@@ -92,23 +106,28 @@ nav{
    
     color: gray;
     background-color: white;
-    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 5%;
+   
 }
 
-ul {
+ .icons{
     display: flex;
     font-size: 13px;
     justify-content: space-around;
     text-align: center;
     gap: 8px;
-    padding: 10px;
-}
+    padding: 1px;
+    width: 100%;
+ }
+.icons__link{
+    display: flex;
+    flex-direction: column;
 
+
+}
 .input{
     width: 100%;
     height: 15%;
